<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    tools:context="com.makentoshe.androidgithubcitemplate.MainActivity"
    tools:ignore="LockedOrientationActivity">

    <Button
        android:id="@+id/buttonSet"
        android:layout_width="109dp"
        android:layout_height="68dp"
        android:text="@string/round_set_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <Button
        android:id="@+id/buttonShowSet"
        android:layout_width="109dp"
        android:layout_height="68dp"
        android:text="@string/show_set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="109dp"
        android:layout_height="68dp"
        android:text="@string/add_cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:text="@string/score"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:stretchMode="spacingWidth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonCard1"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/goe2"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard2"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/goe3"
            android:rotation="90"
            android:stretchMode="spacingWidth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard3"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/prf2"
            android:rotation="90"
            android:stretchMode="spacingWidth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard4"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="-26dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/rwe3"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard5"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="-26dp"
            android:background="@drawable/pws1"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard6"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="-26dp"
            android:background="@drawable/rrf1"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard7"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="-47dp"
            android:background="@drawable/rrs1"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard8"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="-47dp"
            android:background="@drawable/grs3"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard9"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="-47dp"
            android:background="@drawable/rws2"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard10"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="-47dp"
            android:background="@drawable/pre3"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard11"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="-47dp"
            android:background="@drawable/prs1"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/buttonCard12"
            android:layout_width="85dp"
            android:layout_height="119dp"
            android:layout_margin="20dp"
            android:layout_marginTop="-47dp"
            android:background="@drawable/gwf1"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>